# Stellarust5

./: .gitignore  .ignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
actix_broadcaster/: Cargo.toml
actix_broadcaster/src/: actix_rt_tokio_caster.rs  crossbeam_caster.rs  lib.rs  std_caster.rs  tokio_caster.rs
actix_server/: Cargo.toml  build.rs
actix_server/src/: api.rs  lib.rs  main.rs
backend/: Cargo.toml
backend/src/: main.rs
campaign_controller/: Cargo.toml
campaign_controller/src/: filter.rs  lib.rs  scan_root.rs
campaign_info_struct/: Cargo.toml
campaign_info_struct/src/: lib.rs
campaign_info_struct_reader/: Cargo.toml
campaign_info_struct_reader/src/: lib.rs  player_kinds.rs
clausewitz_parser/: Cargo.toml
clausewitz_parser/src/: lib.rs
clausewitz_parser/src/clausewitz/: bracketed.rs  mod.rs  quoted.rs  root.rs  simd.rs  space.rs  tables.rs  unquoted.rs  value.rs
clausewitz_parser/src/clausewitz/tests/: helper.rs
clausewitz_value/: Cargo.toml
clausewitz_value/src/: lib.rs
directory_watcher/: Cargo.toml
directory_watcher/src/: lib.rs  watcher.rs
directory_watcher/tests/: test.rs
front_end/: index.html
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  CampaignSelectPage.tsx  Const.tsx  EmpirePage.tsx  EmpireSelectPage.tsx  ResourceSummary.tsx  ResourceSummaryContainer.tsx  index.tsx
frontend/src/pages/: CampaignSelectPage.tsx  EmpireSelectPage.tsx  ResourceSummary.tsx  ResourceSummaryContainer.tsx
frontend_client/: package-lock.json  package.json
frontend_client/src/: App.css  App.js  CampaignSelectPage.js  Const.js  EmpirePage.js  EmpireSelectPage.js  ResourceSummary.js  ResourceSummaryContainer.js
frontend_static_files/: Cargo.toml  build.rs
frontend_static_files/src/: lib.rs
game_data_controller/: Cargo.toml  stellarust.db
game_data_controller/src/: controller.rs  filter.rs  lib.rs  scan_root.rs
game_data_controller/src/controller/: controller.rs  mod.rs  model_controller.rs  spawn_event_loop.rs
game_data_controller/src/ctrlr/: mod.rs
game_data_controller/src/functions/: broadcast.rs  event_loop.rs  mod.rs  reconcile.rs  sqlite.rs  watcher.rs
game_data_controller/tests/: test.rs
game_data_info_struct/: Cargo.toml
game_data_info_struct/src/: budget.rs  date.rs  empire.rs  fleet.rs  index.rs  index_mut.rs  lib.rs  model.rs  player.rs  resource.rs
game_data_info_struct_reader/: Cargo.toml
game_data_info_struct_reader/src/: lib.rs  util.rs
game_data_info_struct_reader/src/extractor/: budget.rs  empire.rs  empires.rs  fleet.rs  fleets.rs  mod.rs  resources.rs  ship.rs
game_data_info_struct_reader/src/test/: asdf.json  constant_str.rs  empire.json  gamestate.rs  meta.rs  mod.rs  model.json  model_serialized_json.rs
game_data_unzipper/: Cargo.toml
game_data_unzipper/src/: lib.rs
int_test/: Cargo.toml
int_test/resource/unitednationsofearth/: 2200.01.01.serialize
int_test/tests/: int_test.rs  test.rs
int_test/tests/actix_broadcaster/: mod.rs
int_test/tests/api/: mod.rs
int_test/tests/game_data_info_struct_reader/: mod.rs
model_info_struct/: Cargo.toml
model_info_struct/src/: enums.rs  lib.rs
model_info_struct/src/model/: budget_stream_graph.rs  campaign_list.rs  date.rs  empire_list.rs  mod.rs  resource_summary_table.rs
production_data/: 3.4.5.95132.tar.xz  prepare_data.sh
reader_campaign_info_struct/: Cargo.toml
reader_campaign_info_struct/src/: lib.rs
src/: lib.rs
trait_file_reader/: Cargo.toml
trait_file_reader/src/: lib.rs
yew_frontend/: Cargo.toml  Trunk.toml  index.html  styles.scss
yew_frontend/src/: app.rs  fetch_service.rs  lib.rs  route.rs
