[package]
name = "stellarust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "actix_broadcaster",
    "actix_server",
    "campaign_controller",
    "campaign_info_struct",
    "clausewitz_parser",
    "clausewitz_value",
    "directory_watcher",
    "game_data_unzipper",
    "int_test",
    "reader_campaign_info_struct",
    "yew_frontend",
]