[package]
name = "stellarust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "actix_broadcaster",
    "actix_server",

    "directory_watcher",
    "game_data_controller",
    "game_data_info_struct_reader",
    "game_data_info_struct",
    "game_data_unzipper",
    "int_test",
    "model_info_struct",
]