[package]
name = "actix_broadcaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
bytes ="1.2"
actix-rt = "2.7"
actix-web = "4.1"
futures = "0.3"
crtq = "0.1.1"
log = "0.4"
tokio ="1.5"
rayon  ="1.5"
crossbeam = "0.8"