[package]
name = "actix_broadcaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"
serde_json = "1.0.85"
bytes ="1.2.1"
actix-rt = "2.7.0"
actix-web = "4.2.1"
futures = "0.3.24"
crtq = "0.1.1"
log = "0.4.17"
tokio ="1.21.1"
rayon  ="1.5.3"
async-trait = "0.1.57"
crossbeam = "0.8.2"