[package]
name = "actix_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "actix_server_bin"
path = "src/main"

[dependencies]
stellarust = {path = ".."}
actix-web = { version = "4.0.0-beta.10" }
actix-cors = { version = "0.6.0-beta.1" }   
actix-rt="2.6.0"
env_logger = "0.9.0"
log = "0.4.14"
listenfd="1.0.0"
crossbeam= "0.8"
anyhow= "1.0"
serde = "1"
serde_derive = "1"

game_data_controller = {path = "../game_data_controller"}
model_info_struct = {path = "../model_info_struct"}