[package]
name = "actix_server"
version = "0.1.0"
edition = "2021"



[dependencies]
stellarust = {path = ".."}
actix-web = { version = "4.2.1",features = ["rustls"]  }
actix-cors = "0.6.2"  
actix-rt="2.7.0"
actix-files="0.6.2"
env_logger = "0.9.0"
log = "0.4.17"
listenfd="1.0.0"
crossbeam= "0.8.2"
anyhow= "1.0.65"
serde = "1.0.144"
serde_derive = "1.0.144"
rustls =  "0.20.6" 
rustls-pemfile = "1"
actix-web-static-files = "4.0"
static-files = "0.2.1"

game_data_controller = {path = "../game_data_controller"}
model_info_struct = {path = "../model_info_struct"}

[dev-dependencies]
futures = "0.3.24"
chrono = "0.4.22"
game_data_info_struct = {path = "../game_data_info_struct"}

[build-dependencies]
static-files = "0.2.1"