[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellarust = {path = ".."}
actix-web = { version = "4.2.1" }
actix-cors = { version = "0.6.2" }   
actix-rt="2.7.0"
env_logger = "0.9.0"
log = "0.4.17"
listenfd="1.0.0"
crossbeam= "0.8.2"
anyhow= "1.0.65"
serde = "1.0.144"
serde_derive = "1.0.144"
actix_server = {path = "../actix_server"}