[package]
name = "campaign_info_struct_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directory_watcher = {path = "../directory_watcher"}
campaign_info_struct = {path = "../campaign_info_struct"}
clausewitz_parser = { git = "https://github.com/MichaelMcCulloch/clausewitz-parser" }
game_data_unzipper = {path = "../game_data_unzipper"}
log = "0.4"
serde_json = "1"
serde = "1"