[package]
name = "game_data_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model_info_struct = {path ="../model_info_struct"}
actix_broadcaster = {path ="../actix_broadcaster"}
game_data_info_struct = {path= "../game_data_info_struct"}