[package]
name = "game_data_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model_info_struct = {path ="../model_info_struct"}
actix_broadcaster = {path ="../actix_broadcaster"}
game_data_info_struct_reader = {path= "../game_data_info_struct_reader"}
directory_watcher = {path= "../directory_watcher"}

notify = "5.0.0"
crossbeam = "0.8.2" 
log = "0.4.17"
dashmap = "5.4.0"
fxhash = "0.2.1"
actix-rt= "2.7.0"
tokio = "1.21.1"

[dev-dependencies]
stellarust = {path= "../"}
env_logger = "0.9.0"
chrono = "0.4.22"
rusqlite = "0.28.0"