[package]
name = "game_data_info_struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
serde = "1.0.144"
serde_derive = "1.0.144"

[dev-dependencies]

[features]
# Defines a feature named `webp` that does not enable any other features.
test = []