[package]
name = "game_data_info_struct_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trait_file_reader = {path = "../trait_file_reader"}
game_data_info_struct = {path = "../game_data_info_struct"}
clausewitz_parser = { git = "https://github.com/MichaelMcCulloch/clausewitz-parser" }
game_data_unzipper = {path = "../game_data_unzipper"}
log = "0.4.17"
serde_json = "1.0.85"
serde = "1.0.144"

