[package]
name = "int_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
stellarust = {path = ".."}
game_data_info_struct_reader= {path = "../game_data_info_struct_reader"}
game_data_info_struct= {path = "../game_data_info_struct"}
directory_watcher= {path = "../directory_watcher"}
crossbeam = "0.8"
actix-rt ="2.7"
serde = "1"
serde_json = "1"