[package]
name = "int_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
stellarust = {path = ".."}
game_data_info_struct_reader= {path = "../game_data_info_struct_reader"}
actix_server= {path = "../actix_server"}
game_data_controller= {path = "../game_data_controller"}
trait_file_reader= {path = "../trait_file_reader"}
actix_broadcaster= {path = "../actix_broadcaster"}
 
crossbeam = "0.8.2"
actix-rt ="2.7.0"
serde = "1.0.144"
serde_json = "1.0.85"
