[package]
name = "model_info_struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellarust = {path = "../"}
game_data_info_struct = {path = "../game_data_info_struct"}
serde = "1.0.144"
serde_derive = "1.0.144"
chrono = "0.4.22"
dashmap = "5.4.0"
fxhash = "0.2.1"