[package]
name = "reader_campaign_info_struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directory_watcher = {path = "../directory_watcher"}
campaign_info_struct = {path = "../campaign_info_struct"}
clausewitz_parser = {path = "../clausewitz_parser"}
clausewitz_value = {path = "../clausewitz_value"}
game_data_unzipper = {path = "../game_data_unzipper"}