# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
wasm-logger = "0.2.0"
yew = "0.19.3"
yew-router = "0.16.0"
anyhow = "1.0.53"
gloo-utils = "0.1.2"
gloo-events = "0.1.2"
log = "0.4.14"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.78"
time = {version = "0.3.7", features = ["serde", "macros"]}
async-trait = "0.1.52"
js-sys = "0.3"
[dev-dependencies]
wasm-bindgen-test = "0.3.28"


[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "Event",
  "EventSource", 
  "MessageEvent"
]
